fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -200,6 +200,7 @@ height: auto;
   border: none;
   outline: none;
   font-size: 12px;
+  cursor:pointer;
 }
 
 .dropdown {
@@ -280,6 +281,7 @@ height: auto;
 .sidenav a.sidelinks {
   font-size: 16px;
   padding: 6px 13px;
+  cursor: pointer;
 }
 @media screen and (min-width: 768px) {
   .largenav {
